--- a/fire_site/index.html
+++ b/fire_site/index.html
@@ -10,9 +10,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li>Home</li>
-				<li>Salary</li>
-				<li>Independence</li>
+				<li><a>Home</a></li>
+				<li><a href="./salary.html" target="_self">Salary</a></li>
+				<li><a href="./independence.html" target="_blank">Independence</a></li>
 			</ul>
 		</nav>
 		<hr>
@@ -23,6 +23,9 @@
 		<img src="https://images.unsplash.com/photo-1536765148222-891426ce2af3?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZmluYW5jaWFsJTIwZnJlZWRvbXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Finding Financia Freedom">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, vitae voluptates labore repudiandae, unde aperiam totam esse culpa accusamus quas voluptas ad ducimus officiis distinctio consectetur reprehenderit enim possimus inventore saepe ratione nihil deleniti, excepturi earum. Commodi, animi. Corporis sit temporibus quod facere hic error consequatur. Sequi corrupti nam deleniti.</p>	
 	</section>
+	<p>
+		&lt
+	</p>
 	<footer>
 		<ul>
 			<li><img src="https://img.icons8.com/color/2x/twitter.png" alt="twitter"></li>
