--- a/fire_site/index.html
+++ b/fire_site/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<title>Financial Independence Calculator</title>
 </head>
 <body>
@@ -18,14 +20,12 @@
 		<hr>
 	</header>
 	<section>
-		<h2>About</h2>
-		<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos suscipit, nobis quibusdam vel, numquam officia ullam quidem soluta iure perferendis quae. Ipsum, provident. Ducimus enim est molestias perferendis commodi iusto facere, odit cumque dolor nulla vitae quidem, soluta fuga, excepturi sed tempore saepe? Necessitatibus repellat, provident, iure reiciendis molestias nostrum facilis velit maxime a rerum ducimus odio non enim eum sapiente quae. Officia delectus quam minus itaque! Praesentium, ut sequi voluptatem officiis porro saepe quas? Molestiae qui, explicabo provident aliquid et ut sequi, repudiandae, vero delectus ad expedita quo esse illo rerum quae ipsum voluptates sapiente reprehenderit quidem autem iusto incidunt placeat? Enim odit labore sint laudantium amet laboriosam, et magnam inventore dolorem temporibus optio at ullam quo, tempore sed cumque. Dolore, expedita? Molestiae obcaecati a tenetur quidem quia consectetur exercitationem provident. Repellat, perferendis. Quidem mollitia deserunt dolores eaque earum, tempore cumque nam neque non deleniti soluta esse temporibus ipsam, quae ducimus rem eum a. Amet tempore maxime ullam dolorum adipisci quam, voluptatem unde eum porro nemo quidem distinctio laborum nostrum beatae autem eveniet molestiae. Est voluptatum, reprehenderit optio placeat vitae unde ullam illum veniam ipsum obcaecati nesciunt tempora, in nam officia quisquam tenetur quae voluptatibus deserunt dicta perspiciatis? Esse?</p>
+		<h2 class="display-5">About</h2>
+		<p><span class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span> Eos suscipit, nobis quibusdam vel, numquam officia ullam quidem soluta iure perferendis quae. Ipsum, provident. Ducimus enim est molestias perferendis commodi iusto facere, odit cumque dolor nulla vitae quidem, soluta fuga, excepturi sed tempore saepe? Necessitatibus repellat, provident, iure reiciendis molestias nostrum facilis velit maxime a rerum ducimus odio non enim eum sapiente quae. Officia delectus quam minus itaque! Praesentium, ut sequi voluptatem officiis porro saepe quas? Molestiae qui, explicabo provident aliquid et ut sequi, repudiandae, vero delectus ad expedita quo esse illo rerum quae ipsum voluptates sapiente reprehenderit quidem autem iusto incidunt placeat? Enim odit labore sint laudantium amet laboriosam, et magnam inventore dolorem temporibus optio at ullam quo, tempore sed cumque. Dolore, expedita? Molestiae obcaecati a tenetur quidem quia consectetur exercitationem provident. Repellat, perferendis. Quidem mollitia deserunt dolores eaque earum, tempore cumque nam neque non deleniti soluta esse temporibus ipsam, quae ducimus rem eum a. Amet tempore maxime ullam dolorum adipisci quam, voluptatem unde eum porro nemo quidem distinctio laborum nostrum beatae autem eveniet molestiae. Est voluptatum, reprehenderit optio placeat vitae unde ullam illum veniam ipsum obcaecati nesciunt tempora, in nam officia quisquam tenetur quae voluptatibus deserunt dicta perspiciatis? Esse?</p>
 		<img src="https://images.unsplash.com/photo-1536765148222-891426ce2af3?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZmluYW5jaWFsJTIwZnJlZWRvbXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Finding Financia Freedom">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, vitae voluptates labore repudiandae, unde aperiam totam esse culpa accusamus quas voluptas ad ducimus officiis distinctio consectetur reprehenderit enim possimus inventore saepe ratione nihil deleniti, excepturi earum. Commodi, animi. Corporis sit temporibus quod facere hic error consequatur. Sequi corrupti nam deleniti.</p>	
 	</section>
-	<p>
-		&lt
-	</p>
+	
 	<footer>
 		<ul>
 			<li><img src="https://img.icons8.com/color/2x/twitter.png" alt="twitter"></li>
